--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     --blue: rgb(182, 222, 255);
     --dark-blue: rgb(70, 163, 240);
     --white: #f8f8f8;
+    --grey: #dddddd;
 }
 
 * {
@@ -107,7 +108,6 @@ form {
     width: 250px;
     height: 60px;
     position: relative;
-    overflow: hidden;
     border-bottom: 2px solid black;
 }
 
@@ -121,6 +121,7 @@ input {
     padding: 25px 0 0 5px;
     font-size: 17px;
     font-family: "Poppins", sans-serif;
+    color: var(--white);
 }
 
 .label-input {
@@ -129,13 +130,20 @@ input {
     left: 5px;
     transition: transform 0.3s, font-size 0.3s;
     font-size: 17px;
+    cursor: text;
+}
+
+.error-message {
+    color: rgb(141, 2, 30);
+    position: absolute;
+    margin-top: 5px;
 }
 
 .form-input input:focus+.label-input,
 .form-input input:valid+.label-input {
     transform: translateY(-145%);
     font-size: 13px;
-    color: rgb(231, 231, 231);
+    color: var(--grey);
 }
 
 .btn-container {
@@ -227,7 +235,7 @@ input {
         row-gap: 50px;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        height: 350px;
+        height: 300px;
         width: 90%;
        
         margin: auto 0;
@@ -253,7 +261,7 @@ input {
     }
 
     .btn-container {
-        margin: 0 0 30px 0;
+        margin: 0 0 15px 0;
         width: 45%;
         height: 8%;
     }
@@ -264,5 +272,11 @@ input {
 
     .log-in-container {
         margin-bottom: 12px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .form-input {
+        border-bottom: 3px solid black;
     }
 }
